Add java.net stubs directly, use --add-exports in compiler args, fix descriptor regex